objects/VisitOps__Visit_Logistics__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c   )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Time_Location__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Arrival_Date_and_Time_LocationFormula__c</formula>
        <label>Arrival Date/Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__BreakfastFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__Breakfast__c, VisitOps__Breakfast__r.VisitOps__MenuItem__c, &apos;_self&apos; )</formula>
        <label>Breakfast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Breakfast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Breakfast</inlineHelpText>
        <label>Breakfast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__CateringProductsAndServices__c.VisitOps__MenuType__c</field>
                <operation>equals</operation>
                <value>Breakfast</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__CateringProductsAndServices__c</referenceTo>
        <relationshipLabel>Visit Logistics</relationshipLabel>
        <relationshipName>VisitLogistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Daytime_Dining_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Daytime Dining Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Daytime_Dining_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Daytime Dining Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c   )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Time_Location__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Departure_Date_and_Time_LocationFormula__c</formula>
        <label>Departure Date/Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Facility_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__GiftItemFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__GiftItemName__c, VisitOps__GiftItemName__r.VisitOps__ItemName__c, &apos;_self&apos; )</formula>
        <label>Gift Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__GiftItemName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__Products_and_Services__c.VisitOps__ProductsAndServicesType__c</field>
                <operation>equals</operation>
                <value>Gift Products and Services</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__Products_and_Services__c</referenceTo>
        <relationshipLabel>Visit Logistics (Gift)</relationshipLabel>
        <relationshipName>GiftLogistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ground Transportation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationProviderFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__GroundTransportationProvider__c , VisitOps__GroundTransportationProvider__r.VisitOps__Provider_Name__c , &apos;_self&apos; )</formula>
        <label>Ground Transportation Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ground Transportation Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__Supplier__c.VisitOps__Supplier_Type__c</field>
                <operation>equals</operation>
                <value>Ground Transportation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics (Ground Transportation Provider)</relationshipLabel>
        <relationshipName>GroundTransportationLogistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__HotelFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__Hotel__c,  VisitOps__Hotel__r.VisitOps__Provider_Name__c , &apos;_self&apos; )</formula>
        <label>Hotel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hotel_Billing_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hotel Billing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hotel_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hotel Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hotel_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hotel Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hotel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hotel</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics (Supplier)</relationshipLabel>
        <relationshipName>Visit_Logistics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsVisitSubmitted__c</fullName>
        <formula>NOT(ISNULL(VisitOps__Visit__r.VisitOps__Submitted_Date__c))</formula>
        <label>IsVisitSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Location__r.Name</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Logistics_text_field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Logistics text field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LunchFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__Lunch__c , VisitOps__Lunch__r.VisitOps__MenuItem__c, &apos;_self&apos; )</formula>
        <label>Lunch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Lunch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lunch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__CateringProductsAndServices__c.VisitOps__MenuType__c</field>
                <operation>equals</operation>
                <value>Lunch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__CateringProductsAndServices__c</referenceTo>
        <relationshipLabel>Visit Logistics (Lunch)</relationshipLabel>
        <relationshipName>LunchLogistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__PhotographerFormula__c</fullName>
        <formula>HYPERLINK( VisitOps__Photographer__c ,  VisitOps__Photographer__r.VisitOps__Provider_Name__c , &apos;_self&apos;)</formula>
        <label>Photographer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Photographer_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Photographer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Photographer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Photographer</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics (Photographer)</relationshipLabel>
        <relationshipName>Visit_Logistics3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__RestaurantFormula__c</fullName>
        <formula>HYPERLINK(  VisitOps__Restaurant__c,  VisitOps__Restaurant__r.VisitOps__Provider_Name__c , &apos;_self&apos; )</formula>
        <label>Restaurant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restaurant_Billing_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Restaurant Billing Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restaurant_Dining_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Restaurant Dining Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restaurant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Restaurant</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics</relationshipLabel>
        <relationshipName>Visit_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Security_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__SignageSupplierFormula__c</fullName>
        <formula>HYPERLINK(  VisitOps__Signage_Supplier_Name__c ,  VisitOps__Signage_Supplier_Name__r.VisitOps__Provider_Name__c , &apos;_self&apos; )</formula>
        <label>Signage Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Signage_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signage Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Signage_Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signage Supplier</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics (Signage Supplier Name)</relationshipLabel>
        <relationshipName>Visit_Logistics2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Special_Dietary_Requirements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Dietary Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Special_Gift_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Gift Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Status__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitStatus__r.Name</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VideographerFormula__c</fullName>
        <formula>HYPERLINK(  VisitOps__Videographer__c ,  VisitOps__Videographer__r.VisitOps__Provider_Name__c , &apos;_self&apos;)</formula>
        <label>Videographer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Videographer_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Videographer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Videographer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Videographer</label>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Visit Logistics (Videographer)</relationshipLabel>
        <relationshipName>Visit_Logistics4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Logistics_Number__c</fullName>
        <displayFormat>VL{0000}</displayFormat>
        <label>Visit Logistics Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Name__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Type__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitType__r.Name</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Visit Logistics</relationshipLabel>
        <relationshipName>Visit_Logistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visit Logistics</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VL{0000}</displayFormat>
        <label>Visit Logistics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Logistics</pluralLabel>
    <recordTypes>
        <fullName>VisitOps__Restaurant</fullName>
        <active>true</active>
        <description>This is no longer used.</description>
        <label>Restaurant</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>